fix some spacing

--- a/src/pages/LandingPage/LandingPage.module.css
+++ b/src/pages/LandingPage/LandingPage.module.css
@@ -108,6 +108,8 @@
   line-height: 2.2em;
   margin-top: 1.2em;
   color: #3a3d42;
+}
+.heroDesc {
   padding-right: 15em;
 }
 .heroBtnWrapper {
